--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "graphql-request": "^6.1.0",
+    "luxon": "^3.4.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@grafbase/sdk": "^0.6.1",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/luxon": "^3.3.2",
+    "encoding": "^0.1.13"
   }
 }
