--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "graphql-request": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.3",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
