--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "clsx": "^2.0.0",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.3",
+    "luxon-business-days": "^3.0.1",
+    "moment-business-days": "^1.2.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-h5-audio-player": "^3.8.6",
