--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 # testing
 /coverage
-
+.env
 # next.js
 /.next/
 /out/
@@ -33,3 +33,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
